--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -51,4 +51,4 @@ jobs:
           for i in `cat dependencies` ; do echo  $i:` cat $VERSION.json | jq -r .dependencies.\"$i\".version` >> image; done
           cat image
           docker login -u 17685753039 -p abc123456 registry.cn-beijing.aliyuncs.com
-          for i in `cat image | grep -v null`; do docker pull $REGISTRY/$i ;docker tag $REGISTRY/$i $REGISTRYCN/$i; docker push $REGISTRYCN/$i ;done
+          for i in `cat image | grep -v null | grep -v monitoring-third-party`; do docker pull $REGISTRY/$i ;docker tag $REGISTRY/$i $REGISTRYCN/$i; docker push $REGISTRYCN/$i ;done
