--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           docker run -d --name halyard us-docker.pkg.dev/spinnaker-community/docker/halyard:stable
           echo "waiting for halyard ready"
-          sleep 30
+          sleep 20
           
           echo "get latest spinnaker version"
           docker exec  halyard hal version list -q -o json > VERSION
@@ -52,4 +52,4 @@ jobs:
           for i in `cat dependencies` ; do echo  $i:` cat $VERSION.json | jq -r .dependencies.\"$i\".version` >> image; done
           cat image
           docker login -u 17685753039 -p abc123456 registry.cn-beijing.aliyuncs.com
-          for i in `cat image | grep -v null`; do docker pull $REGISTRY1/$i || docker pull $REGISTRY2/$i ;docker tag $REGISTRY1/$i $REGISTRYCN/$i || docker tag $REGISTRY2/$i $REGISTRYCN/$i; docker push $REGISTRYCN/$i ;done
+          for i in `cat image | grep -v null| grep -v monitoring-third-party`; do docker pull $REGISTRY1/$i || docker pull $REGISTRY2/$i ;docker tag $REGISTRY1/$i $REGISTRYCN/$i || docker tag $REGISTRY2/$i $REGISTRYCN/$i; docker push $REGISTRYCN/$i ;done
