--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -43,13 +43,14 @@ jobs:
           cat $VERSION.json | jq .dependencies | jq keys | sed 's#,##;s#"##g;s#\[##;s#\]##' > dependencies
           
           REGISTRY1=us-docker.pkg.dev/spinnaker-community/docker
-          REGISTRY2=gcr.io/spinnaker-marketplace
+          REGISTRY2=gcr.io/marketplace-spinnaker-release
           REGISTRYCN=registry.cn-beijing.aliyuncs.com/spinnaker-community
           echo $REGISTRY $REGISTRYCN
           
           echo halyard:stable > image
           for i in `cat service` ; do echo  $i:` cat $VERSION.json | jq -r .services.\"$i\".version` >> image; done
-          for i in `cat dependencies` ; do echo  $i:` cat $VERSION.json | jq -r .dependencies.\"$i\".version` >> image; done
-          cat image
+          for i in `cat dependencies` ; do echo  $i:` cat $VERSION.json | jq -r .dependencies.\"$i\".version` >> image2; done
+          cat image image2
           docker login -u 17685753039 -p abc123456 registry.cn-beijing.aliyuncs.com
-          for i in `cat image | grep -v null| grep -v monitoring-third-party`; do docker pull $REGISTRY1/$i || docker pull $REGISTRY2/$i ;docker tag $REGISTRY1/$i $REGISTRYCN/$i || docker tag $REGISTRY2/$i $REGISTRYCN/$i; docker push $REGISTRYCN/$i ;done
+          #for i in `cat image1 | grep -v null | grep -v thrid`; do docker pull $REGISTRY1/$i || docker pull $REGISTRY2/$i ;docker tag $REGISTRY1/$i $REGISTRYCN/$i || docker tag $REGISTRY2/$i $REGISTRYCN/$i; docker push $REGISTRYCN/$i ;done
+          for i in `cat image2 `; do docker pull $REGISTRY1/$i || docker pull $REGISTRY2/$i ;docker tag $REGISTRY1/$i $REGISTRYCN/$i || docker tag $REGISTRY2/$i $REGISTRYCN/$i; docker push $REGISTRYCN/$i ;done
