--- a/.github/workflows/blank2.yml
+++ b/.github/workflows/blank2.yml
@@ -34,5 +34,14 @@ jobs:
         run: |
           docker pull us-docker.pkg.dev/spinnaker-community/redis/redis-cluster:v2
           docker tag us-docker.pkg.dev/spinnaker-community/redis/redis-cluster:v2 registry.cn-beijing.aliyuncs.com/spinnaker-community/redis-cluster:v2
+          docker pull us-docker.pkg.dev/spinnaker-community/halyard:stable 
+          docker tag us-docker.pkg.dev/spinnaker-community/halyard:stable registry.cn-beijing.aliyuncs.com/spinnaker-community/halyard:stable 
+          docker pull k8s.gcr.io/kube-state-metrics/kube-state-metrics:v2.5.0
+          docker tag k8s.gcr.io/kube-state-metrics/kube-state-metrics:v2.5.0 registry.cn-beijing.aliyuncs.com/mirrors-gcr-io/kube-state-metrics:v2.5.0
+          docker pull k8s.gcr.io/prometheus-adapter/prometheus-adapter:v0.9.1
+          docker tag k8s.gcr.io/prometheus-adapter/prometheus-adapter:v0.9.1 registry.cn-beijing.aliyuncs.com/mirrors-gcr-io/prometheus-adapter:v0.9.1
           docker login -u 17685753039 -p abc123456 registry.cn-beijing.aliyuncs.com
           docker push registry.cn-beijing.aliyuncs.com/spinnaker-community/redis-cluster:v2
+          docker push registry.cn-beijing.aliyuncs.com/spinnaker-community/halyard:stable 
+          docker push registry.cn-beijing.aliyuncs.com/mirrors-gcr-io/kube-state-metrics:v2.5.0
+          docker push registry.cn-beijing.aliyuncs.com/mirrors-gcr-io/prometheus-adapter:v0.9.1
